--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -65,7 +65,7 @@ div.item {
     vertical-align: top;
     display: inline-block;
     text-align: center;
-    width: 120px;
+    width: auto;
 }
 img {
     width: 100px;
@@ -317,16 +317,16 @@ img {
             
   <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.18.12.jpeg" alt="WhatsApp Image 2021-09-16 at 17.18.12" title="WhatsApp Image 2021-09-16 at 17.18.12" width="2048" height="2048" />
     <div class="desc">Musselin </div> <div class="desc"> Punkte rost</div>
-         <div class="item">
-   
+        
+   <div class="item">
  	 <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.18.39.jpeg" alt="WhatsApp Image 2021-09-16 at 17.18.39" title="WhatsApp Image 2021-09-16 at 17.18.39" width="2048" height="2048" />
    	 <div class="desc">Baumwolljersey</div> <div class="desc">Leo gelb</div>
    </div>
    
-       <div class="item">
-  <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.18.57.jpeg" alt="WhatsApp Image 2021-09-16 at 17.18.57" title="WhatsApp Image 2021-09-16 at 17.18.57" width="2048" height="2048" />
-    <span class="caption">BaumwolljerseyLeo gr&uuml;n</span>
-  </div>  
+   <div class="item">
+   	 <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.18.57.jpeg" alt="WhatsApp Image 2021-09-16 at 17.18.57" title="WhatsApp Image 2021-09-16 at 17.18.57" width="2048" height="2048" />
+    	 <div class="desc">Baumwolljersey </div> <div class="desc">Leo gr&uuml;n</div>
+   </div>  
   
     <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.19.11.jpeg" alt="WhatsApp Image 2021-09-16 at 17.19.11" title="WhatsApp Image 2021-09-16 at 17.19.11" width="2048" height="2048" />
     <div class="desc">Baumwolljersey </div> <div class="desc"> Leo rost</div>
