--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -449,7 +449,7 @@ img {
 
 <div class="item">
   <img src="/stoffe/WhatsApp Image 2021-09-16 at 17.31.26.jpeg" alt="WhatsApp Image 2021-09-16 at 17.31.26" title="WhatsApp Image 2021-09-16 at 17.31.26" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey</div> <div class="desc"> Elephanten </div> <div class="desc"> blaugrau</div>
+    <div class="desc">Baumwolljersey</div> <div class="desc"> Elephanten blau</div>
    </div>
 
 <div class="item">
@@ -559,7 +559,7 @@ img {
    
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.43.28.jpeg" alt="WhatsApp Image 2021-09-16 at 17.43.28" title="WhatsApp Image 2021-09-16 at 17.43.28" width="2048" height="2048" />
- <div class="desc">Baumwolljersey </div> <div class="desc"> grüne Krokodile</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> gr&uuml;ne Krokodile</div>
    </div>
    
 <div class="item">
@@ -569,7 +569,7 @@ img {
    
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.44.07.jpeg" alt="WhatsApp Image 2021-09-16 at 17.44.07" title="WhatsApp Image 2021-09-16 at 17.44.07" width="2048" height="2048" />
- <div class="desc">Baumwolljersey </div> <div class="desc"> Löwe blau</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> L&ouml;we blau</div>
    </div>
    
 <div class="item">
@@ -634,7 +634,7 @@ img {
    
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.50.06.jpeg" alt="WhatsApp Image 2021-09-16 at 17.50.06" title="WhatsApp Image 2021-09-16 at 17.50.06" width="2048" height="2048" />
- <div class="desc">Musselinstoff </div> <div class="desc"> Herbstblätter</div>
+ <div class="desc">Musselinstoff </div> <div class="desc"> Herbstbl&auml;tter</div>
    </div>
    
 <div class="item">
@@ -644,7 +644,7 @@ img {
    
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.50.51.jpeg" alt="WhatsApp Image 2021-09-16 at 17.50.51" title="WhatsApp Image 2021-09-16 at 17.50.51" width="2048" height="2048" />
- <div class="desc">Baumwolljersey </div> <div class="desc"> Herbstblätter</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Herbstbl&auml;tter</div>
    </div>
    
 <div class="item">
@@ -664,17 +664,17 @@ img {
    
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.52.29.jpeg" alt="WhatsApp Image 2021-09-16 at 17.52.29" title="WhatsApp Image 2021-09-16 at 17.52.29" width="2048" height="2048" />
- <div class="desc">Baumwolljersey </div> <div class="desc"> Regenbogen</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Regenb&ouml;gen</div>
    </div>
    
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.52.57.jpeg" alt="WhatsApp Image 2021-09-16 at 17.52.57" title="WhatsApp Image 2021-09-16 at 17.52.57" width="2048" height="2048" />
- <div class="desc">Baumwolljersey </div> <div class="desc"> Regenbogen</div> <div class="desc"> grün/gelb</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Regenb&ouml;gen</div> <div class="desc"> gelb</div>
    </div>
    
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 18.01.46.jpeg" alt="WhatsApp Image 2021-09-16 at 18.01.46" title="WhatsApp Image 2021-09-16 at 18.01.46" width="2048" height="2048" />
- <div class="desc">Baumwolljersey </div> <div class="desc"> Regenbögen</div> <div class="desc"> Rosa</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Regenb&ouml;gen Rosa</div>
    </div>
    
 <div class="item">
@@ -684,7 +684,7 @@ img {
    
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 18.03.43.jpeg" alt="WhatsApp Image 2021-09-16 at 18.03.43" title="WhatsApp Image 2021-09-16 at 18.03.43" width="2048" height="2048" />
- <div class="desc">Baumwolljersey </div> <div class="desc"> Schmetterlinge</div> <div class="desc"> blau</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Schmetterlinge blau</div>
    </div>
    
 <div class="item">
@@ -694,7 +694,7 @@ img {
    
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 18.04.37.jpeg" alt="WhatsApp Image 2021-09-16 at 18.04.37" title="WhatsApp Image 2021-09-16 at 18.04.37" width="2048" height="2048" />
- <div class="desc">Baumwolljersey </div> <div class="desc"> Schmetterlinge </div> <div class="desc">Jeansblau</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Schmetterlinge jeans</div>
    </div>
    
 <div class="item">
@@ -729,7 +729,7 @@ img {
    
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 18.07.33.jpeg" alt="WhatsApp Image 2021-09-16 at 18.07.33" title="WhatsApp Image 2021-09-16 at 18.07.33" width="2048" height="2048" />
- <div class="desc">Baumwolljersey</div> <div class="desc"> Love you</div> <div class="desc"> to the moon</div> <div class="desc"> and back</div>
+ <div class="desc">Baumwolljersey</div> <div class="desc"> to the moon</div>
    </div>
    
 <div class="item">
@@ -759,7 +759,7 @@ img {
    
 <div class="item">
  <img src="stoffe/blauebirnenmitmuster.jpeg" alt="blaue Birnen mit Muster" title="blaue Birnen mit Muster" width="2048" height="2048" />
-   <div class="desc">Baumwolljersey </div> <div class="desc"> blaue Birnen</div> <div class="desc"> mit Muster</div>
+   <div class="desc">Baumwolljersey </div> <div class="desc"> blaue Birnen 2 </div> 
    </div>
    
 <div class="item">
@@ -774,7 +774,7 @@ img {
    
 <div class="item">
  <img src="stoffe/bunteherbstbirnen.jpeg" alt="bunte Herbst Birnen" title="bunte Herbst Birnen" width="2048" height="2048" />
-   <div class="desc">Baumwolljersey </div> <div class="desc"> bunte</div> <div class="desc"> Herbst Birnen</div>
+   <div class="desc">Baumwolljersey </div> <div class="desc"> Herbst Birnen</div>
    </div>
    
 <div class="item">
@@ -784,7 +784,7 @@ img {
    
 <div class="item">
  <img src="stoffe/herbstaepfle.jpeg" alt="herbst Aepfle" title="Herbst Aepfle" width="2048" height="2048" />
-   <div class="desc">Baumwolljersey </div> <div class="desc"> Herbst Aepfle</div>
+   <div class="desc">Baumwolljersey </div> <div class="desc"> Herbst &Auml;pfle</div>
    </div>
    
 <div class="item">
@@ -794,7 +794,7 @@ img {
    
 <div class="item">
   <img src="stoffe/rostfarbeneloewen.jpeg" alt="rostfarbene Loewen" title="rostfarbene Loewen" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey</div> <div class="desc"> rostfarbene Loewen</div>
+    <div class="desc">Baumwolljersey</div> <div class="desc"> rostfarbene L&ouml;wen</div>
    </div>
    
 <div class="item">
