--- a/src/agb.html
+++ b/src/agb.html
@@ -248,7 +248,8 @@ Versandkosten innerhalb Deutschlands 5,20&euro; <br>
 	   </div>
   <br>
 
-  
+  </div>
+  </div>
   
   
   <!-- Outside transparentbox -->
