--- a/src/agb.html
+++ b/src/agb.html
@@ -250,6 +250,8 @@ Versandkosten innerhalb Deutschlands 5,20&euro; <br>
 
   </div>
   </div>
+  </div>
+  
   
   
   <!-- Outside transparentbox -->
