--- a/src/agb.html
+++ b/src/agb.html
@@ -264,7 +264,7 @@ Versandkosten innerhalb Deutschlands 5,20&euro; <br>
                   
 
                                 
-  <p >  ♥  <br> <br> 
+  <p style="color: black>  ♥  <br> <br> 
   
   Vergarnt und Zugen&auml;ht<br>
     <br>
