--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -701,7 +701,7 @@ div.item {
    
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.46.41.jpeg" alt="WhatsApp Image 2021-09-16 at 17.46.41" title="WhatsApp Image 2021-09-16 at 17.46.41" width="2048" height="2048" />
- <div class="desc">Baumwolljersey </div> <div class="desc"> Faultiere </div> <div class="desc"> dunkel</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> Faultiere dunkel</div>
    </div>
    
 <div class="item">
