--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -259,6 +259,9 @@ div.item {
  <small>   <h4 style="color: black;"></h4style><b>Punkte, Streifen und Herzchen:</b></h4>  </small>
          
 <div class="gallery">
+	
+	<br>
+<div class="center">
 <div class="item">
   <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.11.23.jpeg" alt="WhatsApp Image 2021-09-16 at 17.11.23" title="WhatsApp Image 2021-09-16 at 17.11.23" width="2048" height="2048" />
     <div class="desc">Baumwolljersey </div> <div class="desc">dots weiss</div>
@@ -539,6 +542,7 @@ div.item {
     <div class="desc">Baumwolljersey</div> <div class="desc"> senffarbene </div> <div class="desc">Sparkle</div>
 </div> 
 </div>
+	</div>
 <br>
                               
 
