--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -12,21 +12,21 @@
 .sidebar {
 height: 100%;
 width: 0;
-position: static;
+position: scroll;
 z-index: 1;
 top: 0;
 left: 0;
 background-color: lightorange;
 overflow-x: hidden;
-transition: 0.5s;
-padding-top: 60px;
+transition: 0.3s;
+padding-top: 40px;
 }
 
 .sidebar a {
 padding: 8px 8px 8px 32px;
 text-decoration: none;
 font-size: 25px;
-color: blanchedalmond;
+color: darkgray;
 display: block;
 transition: 0.3s;
 }
