--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -262,6 +262,9 @@ div.item {
 	 </div>        
 </div>
 <br>
+		  
+		  <div class="container background">
+	<div id="transbox">
                    
 <small>   <h4 style="color: black;"></h4style><b>Punkte, Streifen und Herzen:</b></h4>  </small>
 
