--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -26,7 +26,7 @@ padding-top: 4px;
 padding: 8px 8px 8px 32px;
 text-decoration: none;
 font-size: 25px;
-color: darkgray;
+color: black;
 display: block;
 transition: 0.3s;
 }
@@ -141,7 +141,7 @@ div.item {
         
 
 <div class="container background">
-	<div id="transbox">
+
 		
 <div class="gallery">
 
