--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -687,6 +687,8 @@ div.item {
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.44.39.jpeg" alt="WhatsApp Image 2021-09-16 at 17.44.39" title="WhatsApp Image 2021-09-16 at 17.44.39" width="2048" height="2048" />
  <div class="desc">Baumwolljersey </div> <div class="desc"> Löwe Orange</div>
    </div>
+	
+<small>   <h4 style="color: black;"></h4style><b>Streifen </b></h4>  </small>
    
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.45.21.jpeg" alt="WhatsApp Image 2021-09-16 at 17.45.21" title="WhatsApp Image 2021-09-16 at 17.45.21" width="2048" height="2048" />
