--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -693,10 +693,13 @@ div.item {
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.44.39.jpeg" alt="WhatsApp Image 2021-09-16 at 17.44.39" title="WhatsApp Image 2021-09-16 at 17.44.39" width="2048" height="2048" />
  <div class="desc">Baumwolljersey </div> <div class="desc"> Löwe Orange</div>
    </div>
+<br>
+                   
+<small>   <h4 style="color: black;"></h4style><b>Tiere und Natur:</b></h4>  </small>
+
+<div class="gallery">
 	
-<small>   <h4 style="color: black;"></h4style><b>Streifen </b></h4>  </small>
-   
-<div class="item">
+	<div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.45.21.jpeg" alt="WhatsApp Image 2021-09-16 at 17.45.21" title="WhatsApp Image 2021-09-16 at 17.45.21" width="2048" height="2048" />
  <div class="desc">Baumwolljersey </div> <div class="desc"> Pferde rosa</div>
    </div>
