--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -122,7 +122,7 @@ div.item {
           <a href="groessentabelle.html">Gr&ouml&szligentabelle</a>
         </div>
 
-       
+        <div class="transbox">
         <div class="parallax">
 
             <div style="background-color:white;font-size:30px">
@@ -133,9 +133,10 @@ div.item {
                         <img src="logo.jpg" alt="Schriftzug und Logo von Vergarnt und Zugenaeht">
                     </span>
 		     
-
+		</div>
                 </div>
 	        </div>
+		</div>
             <br>
         </div>
 	</div>
