--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -130,8 +130,8 @@ div.item {
                 <div class="center">
 
                     <span>
-                        <img src="logo.jpg" alt="Schriftzug und Logo von Vergarnt und Zugenaeht">
-			<a href="https://www.vergarntundzugenaeht.de/index.html">
+                        <img href="https://www.vergarntundzugenaeht.de/index.html" src="logo.jpg" alt="Schriftzug und Logo von Vergarnt und Zugenaeht">
+			
                     </span>
 		     
 		</div>
