--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -130,7 +130,7 @@ div.item {
                 <div class="center">
 
                     <span>
-                        <img href="https://www.vergarntundzugenaeht.de/index.html" src="logo.jpg" alt="Schriftzug und Logo von Vergarnt und Zugenaeht">
+                        <img src="logo.jpg" alt="Schriftzug und Logo von Vergarnt und Zugenaeht">
 			
                     </span>
 		     
@@ -563,14 +563,7 @@ div.item {
             <div class="item">         
               <img src="punktestoff/senffarbenesparkle.jpeg" alt="senffarbene Sparkle" title="senffarbene Sparkle" width="2048" height="2048" />
                 <div class="desc">Baumwolljersey</div> <div class="desc"> senffarbene </div> <div class="desc">Sparkle</div>
-            </div> 
             </div>
-                </div>
-            <br>
-                      </div>
-                </div>
-            <br>
-      
       </span>
   <button onclick="myFunctionn()" id="myBtnn">Mehr ansehen
   </button>
