--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -952,7 +952,10 @@ div.item {
       <img src="stoffe/WhatsApp Image 2022-06-28 at 6.11.00 PM.jpeg" alt="WhatsApp Image 2022-06-28 at 6.11.00 PM" title="WhatsApp Image 2022-06-28 at 6.11.00 PM" width="1023" height="1022" />
 <div class="desc">Sweatstoff </div> <div class="desc"> Fuchs</div>
          </div>
+        </div>
       
+  
+            </div>
   
             </div>
        </div>
