--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -270,15 +270,22 @@ div.item {
 
         </div>
 	</div>
-<small>   <h4 style="color: black;"></h4style><b>Punkte, Streifen und Herzen:</b></h4>  </small>
+	<span>
+	<div class="logosmaller">
+                        <img src="logo.jpg" alt="Schriftzug und Logo von Vergarnt und Zugenaeht">
+			
+                    </span>
+	
+	</div>
+	
+<small><h4 style="color: black;"></h4style><b>Punkte, Streifen und Herzen:</b></h4></small>
 
 <div class="gallery">
 	
-	
-<div class="item">
+
 <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.11.23.jpeg" alt="Baumwolljersey dots weiss" title="Baumwolljersey dots weiss" width="2048" height="2048" />
     <div class="desc">dots weiss</div>
-</div>
+
 	
 <div class="item">            
   <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.12.04.jpeg" alt="WhatsApp Image 2021-09-16 at 17.12.04" title="WhatsApp Image 2021-09-16 at 17.12.04" width="2048" height="2048" />
