--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -271,11 +271,12 @@ div.item {
         </div>
 	</div>
 	<span>
-	<div class="logosmaller">
+	<div class="image2ale">
                         <img src="logo.jpg" alt="Schriftzug und Logo von Vergarnt und Zugenaeht">
 			
                     </span>
 	
+	</div>
 	</div>
 	
 <small><h4 style="color: black;"></h4style><b>Punkte, Streifen und Herzen:</b></h4></small>
@@ -570,6 +571,17 @@ div.item {
 	</div>
 	</div>
 <br>
+
+
+
+</div>
+<div class="image2ale">
+                        <img src="logo.jpg" alt="Schriftzug und Logo von Vergarnt und Zugenaeht">
+			
+                    </span>
+	
+	</div>
+
                    
 <small>   <h4 style="color: black;"></h4style><b>Tiere und Natur:</b></h4>  </small>
 
