--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -281,7 +281,7 @@ div.item {
 		
 <div class="gallery">
 	
-	 <div class="desc"> <br> </div>
+	 <div class="desc"> </div>
 
 <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.11.23.jpeg" alt="Baumwolljersey dots weiss" title="Baumwolljersey dots weiss" width="2048" height="2048" />
     <div class="desc">dots weiss</div>
