--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -99,7 +99,12 @@ div.item {
 
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-   
+    <a href="index.html">Start</a>
+    <a href="uebermich.html">&Uuml;ber mich</a>
+    <a href="sofortkaeufe.html">Sofortk&auml;ufe</a>
+    <a class="active" href="stoffe.html">Stoffe</a>
+    <a href="preise.html">Preise</a>
+    <a href="groessentabelle.html">Gr&ouml&szligentabelle</a>
   </div>
 
 
@@ -109,12 +114,7 @@ div.item {
     </button>  
     <div class="content">
         <div class="topnav">
-          <a href="index.html">Start</a>
-          <a href="uebermich.html">&Uumlber mich</a>
-          <a href="sofortkaeufe.html">Sofortk&aumlufe</a>
-          <a class="active" href="stoffe.html">Stoffe</a>
-          <a href="preise.html">Preise</a>
-          <a href="groessentabelle.html">Gr&ouml&szligentabelle</a>
+          
         </div>
 
         <div class="transbox">
