--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -109,7 +109,12 @@ div.item {
 
 
   <div id="main">
-
+          <a href="index.html"></a>
+          <a href="uebermich.html"></a>
+          <a href="sofortkaeufe.html"></a>
+          <a class="active" href="stoffe.html"></a>
+          <a href="preise.html"></a>
+          <a href="groessentabelle.html"></a>
     <button class="openbtn" onclick="openNav()">☰ 
     </button>  
     <div class="content">
