--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -127,7 +127,7 @@ div.item {
 
             <div style="background-color:white;font-size:30px">
         
-                <div class="center">
+                <div class="left">
 
                     <span>
                         <img src="logo.jpg" alt="Schriftzug und Logo von Vergarnt und Zugenaeht">
