--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -102,7 +102,9 @@ div.item {
                 <div class="left">
 
                     <span>
-                        <img src="logo.jpg" alt="Schriftzug und Logo von Vergarnt und Zugenaeht">
+		     <a href="https://www.vergarntundzugenaeht.de/">
+                        <img src="logo.jpg" alt="Schriftzug und Logo von Vergarnt und Zugenaeht"
+         style="float:left">
 			
                     </span>
 		     
