--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -91,6 +91,7 @@ div.item {
        </tr>
  
    </table>
+<dic class="image3ale">
    <div class="transbox">
       
 
@@ -110,6 +111,7 @@ div.item {
 		     
 		
  </div>
+	</div>
 		
 	
 	
