--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -277,7 +277,7 @@ div.item {
     <div class="desc">Musselinstoff</div> <div class="desc"> dunkelblau</div>
     
     </span>
-<button onclick="myFunction()" id="myBtn">Mehr ansehen
+<button onclick="myFunction()" id="myBtn">Mehr ansehen <br> <br> <br>
 </button>
 
 
