--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -92,7 +92,7 @@ div.item {
  
    </table>
 <dic class="image3ale">
-   <div class="transbox">
+   <div class="faketransbox">
       
 
             
