--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -153,6 +153,12 @@ div.item {
 		</div>
             <br>
         </div>
+	  
+	  <small>  
+    <h4 style="color: black;"></h4style><b>Hallo, dies sind alle Stoffe die ich momentan habe. </b></h4>  
+</small>
+        
+	  
 	</div>
 <br>
                    
