--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -156,6 +156,7 @@ div.item {
 	  
 	  <small>  
     <h4 style="color: black;"></h4style><b>Hallo, dies sind alle Stoffe die ich momentan habe. </b></h4>  
+	   <h4 style="color: black;"></h4style><b>Baumwolljersey, Sommersweat und Musselinstoff.  </b></h4>  
 </small>
         
 	  
