--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -158,7 +158,7 @@ div.item {
     <h4 style="color: black;"></h4style><b>Hallo, dies sind alle Stoffe die ich momentan habe. </b></h4>  
 	   <h4 style="color: black;"></h4style><b>Baumwolljersey, Sommersweat und Musselinstoff.  </b></h4>  
 	
-	 <h4 style="color: black;"></h4style><b>Schreibt mir gerne eine Nachricht ;uuml;ber insta, email oder die Kontaktbox. Ich freue mich sehr auf eure Ideen und W&uuml;nsche! </b></h4>  
+	 <h4 style="color: black;"></h4style><b>Schreibt mir gerne eine Nachricht &uuml;ber insta, email oder die Kontaktbox. Ich freue mich sehr auf eure Ideen und W&uuml;nsche! </b></h4>  
 </small>
         
 	  
