--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -296,18 +296,25 @@ div.item {
 <small><h4 style="color: black;"></h4style><b>Punkte, Streifen und Herzen:</b></h4>  
 		
 <div class="gallery">
-
+	
+<div class="item">
   <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.11.23.jpeg" alt="Baumwolljersey dots weiss" title="Baumwolljersey dots weiss" width="2048" height="2048" />
     <div class="desc">Baumwolljersey </div><div class="desc">dots weiss</div>
-
+ </div>
+	
+<div class="item">
 	    
   <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.12.04.jpeg" alt="WhatsApp Image 2021-09-16 at 17.12.04" title="WhatsApp Image 2021-09-16 at 17.12.04" width="2048" height="2048" />
     <div class="desc">Baumwolljersey </div> <div class="desc"> dots rosa</div>
-
+ </div>
+	
+<div class="item">
 
   <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.12.19.jpeg" alt="WhatsApp Image 2021-09-16 at 17.12.19" title="WhatsApp Image 2021-09-16 at 17.12.19" width="2048" height="2048" />
     <div class="desc">Baumwolljersey </div> <div class="desc"> dots gelb</div>
-
+ </div>
+	
+<div class="item">
 	
 <div class="item">
   <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.12.34.jpeg" alt="WhatsApp Image 2021-09-16 at 17.12.34" title="WhatsApp Image 2021-09-16 at 17.12.34" width="2048" height="2048" />
