--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -156,14 +156,20 @@ div.item {
 		</div>
             <br>
         </div>
-	  
+	  <br>
+	  <br>
+	  <br>
+	  <br>
+	  <br>
 	  <small>  
-    <h4 style="color: black;"></h4style><b>Hallo, dies sind alle Stoffe die ich momentan habe. </b></h4>  
-	   <h4 style="color: black;"></h4style><b>Baumwolljersey, Sommersweat und Musselinstoff.  </b></h4>  
+    <p style="color: black;"><b>Hallo, dies sind alle Stoffe die ich momentan habe. </b></p>  
+	   <p style="color: black;"><b>Baumwolljersey, Sommersweat und Musselinstoff.  </b></p>  
 	
-	 <h4 style="color: black;"></h4style><b>Schreibt mir gerne eine Nachricht &uuml;ber insta, email oder die Kontaktbox. Ich freue mich sehr auf eure Ideen und W&uuml;nsche! </b></h4>  
+	 <p style="color: black;"><b>Schreibt mir gerne eine Nachricht &uuml;ber insta, email oder die Kontaktbox. Ich freue mich sehr auf eure Ideen und W&uuml;nsche! </b></h4>  
 </small>
-        
+        <br>
+	  <br>
+	  <br>
 	  
 	</div>
 	</div>
