--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -104,12 +104,12 @@ div.item {
 	
 <div class="image3ale">
    <div class="faketransbox">
-    <div class="left">
+    <div class="right">
  
                     <span>
 		     <a href="https://www.vergarntundzugenaeht.de/">
                         <img src="logo.jpg" alt="Schriftzug und Logo von Vergarnt und Zugenaeht"
-         style="float:left">
+         style="float:right">
 			
                     </span>
 	 </div>	     
