--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -105,15 +105,15 @@ div.item {
 
    <div class="faketransbox">
     <div class="right">
- 
+   <div class="center">
                     <span>
 		     <a href="https://www.vergarntundzugenaeht.de/">
                         <img src="logo.jpg" alt="Schriftzug und Logo von Vergarnt und Zugenaeht"
-         style="float:right">
+         style="float:righ; object-fit: cover">
 			
                     </span>
 	 </div>	     
-		
+	    </div>
 
 	</div>
 		
