--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -285,7 +285,7 @@ div.item {
 
 <div class="gallery">
 <img src="Motivstoffe/WhatsApp Image 2021-09-16 at 18.14.57.jpeg" alt="WhatsApp Image 2021-09-16 at 18.14.57" title="WhatsApp Image 2021-09-16 at 18.14.57" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey</div> <div class="desc"> Bagger</div> <div class="desc"> und Traktoren</div>
+    <div class="desc">Baumwolljersey</div> <div class="desc">Traktoren</div>
     
 <img src="Motivstoffe/WhatsApp Image 2021-09-16 at 18.15.19.jpeg" alt="WhatsApp Image 2021-09-16 at 18.15.19" title="WhatsApp Image 2021-09-16 at 18.15.19" width="2048" height="2048" />
     <div class="desc">Baumwolljersey</div> <div class="desc"> blaue</div> <div class="desc"> Fahrzeuge</div>
