--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -127,17 +127,17 @@ div.item {
 	    
 	<div class="faketransbox">
     <div class="right">
-   <div class="center">
+
                     <span>
 		     <a href="https://www.vergarntundzugenaeht.de/">
                         <img src="logo.jpg" alt="Schriftzug und Logo von Vergarnt und Zugenaeht"
-         style="float:righ; object-fit: cover">
+         style="float:right; object-fit: cover">
 			
                     </span>
 	 </div>	     
 	    </div>
 
-	</div>
+
 		
 	
 	
