--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -282,7 +282,7 @@ div.item {
     <div class="desc">Baumwolljersey</div> <div class="desc"> Ahoy Piraten</div>
     
 <img src="Motivstoffe/WhatsApp Image 2021-09-16 at 18.18.17.jpeg" alt="WhatsApp Image 2021-09-16 at 18.18.17" title="WhatsApp Image 2021-09-16 at 18.18.17" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey</div> <div class="desc"> Piraten</div>
+    <div class="desc">Baumwolljersey Piraten</div>
     
 <img src="Motivstoffe/WhatsApp Image 2021-09-16 at 18.18.41.jpeg" alt="WhatsApp Image 2021-09-16 at 18.18.41" title="WhatsApp Image 2021-09-16 at 18.18.41" width="2048" height="2048" />
     <div class="desc">Baumwolljersey </div> <div class="desc"> Salz, Pfeffer</div>
