--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -47,7 +47,7 @@ margin-left: 50px;
 font-size: 20px;
 cursor: pointer;
 background-color: transparent;
-color: whitesmoke;
+color: black;
 padding: 10px 15px;
 border: none;
 }
