--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -47,13 +47,14 @@ margin-left: 50px;
 font-size: 20px;
 cursor: pointer;
 background-color: transparent;
-color: black;
+color: whitesmoke;
 padding: 10px 15px;
 border: none;
 }
 
 .openbtn:hover {
 background-color: black;
+color: whitesmoke;
 }
 
 #main {
