--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -258,8 +258,9 @@ div.item {
 
         </div>
 	</div>
-<small>   <h4 style="color: black;"></h4style><b>Fahrzeuge und Motive:</b></h4>  </small>
-
+<div class="transbox">
+<p style="color: black;">Fahrzeuge und Motive:</p>
+</div>
 <div class="gallery">
 <img src="Motivstoffe/WhatsApp Image 2021-09-16 at 18.14.57.jpeg" alt="WhatsApp Image 2021-09-16 at 18.14.57" title="WhatsApp Image 2021-09-16 at 18.14.57" width="2048" height="2048" />
     <div class="desc">Baumwolljersey Traktoren</div>
