--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -32,7 +32,7 @@ transition: 0.3s;
 }
 
 .sidebar a:hover {
-color: brown;
+color: transparent;
 }
 
 .sidebar .closebtn {
@@ -46,7 +46,7 @@ margin-left: 50px;
 .openbtn {
 font-size: 20px;
 cursor: pointer;
-background-color: transparent;
+background-color: whitesmoke;
 color: whitesmoke;
 padding: 10px 15px;
 border: none;
