--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -295,7 +295,7 @@ div.item {
     <div class="desc">Baumwolljersey </div> <div class="desc"> Maler</div>
     
 <img src="Motivstoffe/WhatsApp Image 2021-09-16 at 18.19.47.jpeg" alt="WhatsApp Image 2021-09-16 at 18.19.47" title="WhatsApp Image 2021-09-16 at 18.19.47" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey </div> <div class="desc"> Roboter</div>
+    <div class="desc">Baumwolljersey </div> <div class="desc"> Roboter</div> <div class="desc"> </div>
     
 <img src="Motivstoffe/WhatsApp Image 2021-09-16 at 18.20.04.jpeg" alt="WhatsApp Image 2021-09-16 at 18.20.04" title="WhatsApp Image 2021-09-16 at 18.20.04" width="2048" height="2048" />
     <div class="desc">Baumwolljersey </div> <div class="desc"> Kirschen</div>
