--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -92,6 +92,10 @@ div.item {
        </tr>
  
    </table>
+   
+   <div class="transbox">
+<p style="color: black;">Vergarnt und Zugen&auml;ht</p>
+</div>
 	
 	 <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
