--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -144,8 +144,7 @@ body {
        </tr>
  
    </table>
-	
-	 <div id="mySidebar" class="sidebar">
+<div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
     <a href="index.html">Start</a>
     <a href="uebermich.html">&Uuml;ber mich</a>
@@ -177,7 +176,7 @@ body {
 
         <div class="gallery">
             <div class="img-w">
-              <img src="https://images.unsplash.com/photo-1485766410122-1b403edb53db?dpr=1&auto=format&fit=crop&w=1500&h=846&q=80&cs=tinysrgb&crop=" alt="" /></div>
+              <img src="unistoff/WhatsApp Image 2021-09-16 at 16.30.17.jpeg alt="" /></div>
             <div class="img-w"><img src="unistoff/WhatsApp Image 2021-09-16 at 16.30.17.jpeg" alt="Baumwolljersey, hellgrau" /></div>
             <div class="img-w"><img src="unistoff/WhatsApp Image 2021-09-16 at 16.30.34.jpeg" alt="Baumwolljersey, ocker" /></div>
             <div class="img-w"><img src="unistoff/WhatsApp Image 2021-09-16 at 16.30.46.jpeg" alt="Baumwolljersey, pink" /></div>
