--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -170,7 +170,7 @@ body {
     <button class="openbtn" onclick="openNav()">☰ 
     </button>  
     <div class="content">
-       
+	  </div>
 	
 	
 
