--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,42 @@
   transition: margin-left .5s;
   padding: 16px;
 }
+	    
+div.gallery {
+   line-height:0;
+   -webkit-column-count:3; /* split it into 3 columns */
+   -webkit-column-gap:5px; /* give it a 5px gap between columns */
+   -moz-column-count:3;
+   -moz-column-gap:5px;
+   column-count:3;
+   column-gap:5px;
+}
+div.gallery img {
+   width: 100% !important;
+   height: 100% !important;
+   margin-bottom:6px; /* to match column gap */
+   white-space: wrap;
+}
+
+
+div.desc {
+  padding: 6px;
+  text-align: center;
+  color: black;
+  margin-bottom: 4px;
+  font-size: 39%;
+  white-space: wrap;
+  width: 90% !important;
+  height: 105% !important;
+  }
+
+
+span {
+    display: inline-block;
+}
+img {
+    width: 99%;
+}
 
 
 
