--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -6,6 +6,11 @@
     <title>Vergarnt und Zugenaeht</title>
     <link rel="stylesheet" href="mystyle.css">
     <link rel="stylesheet" href="print.css" type="text/css" media="print">
+     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,900' rel='stylesheet' type='text/css'>
+  
+  <link rel='stylesheet prefetch' href='https://npmcdn.com/basscss@8.0.0/css/basscss.min.css'>
+
+      <link rel="stylesheet" href="css/style.css">
    
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
