--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -151,7 +151,7 @@
 			<a href="#" class="close"></a>
 			<li>
 				<a href="#item02">
-					<img src="http://d13yacurqjgara.cloudfront.net/users/22177/screenshots/1474358/respecthustle-bearfight-jeremiahbritton-.png" alt="">
+					<img src="unistoff/WhatsApp Image 2021-09-16 at 16.44.13.jpeg" alt="">
 				</a>
 			</li>
 
