--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -134,7 +134,7 @@
    <div class="transbox">
    <div class="parallax">
 
-      <div style="background-color:white;font-size:30px">
+     
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 
@@ -160,7 +160,7 @@
 
 			<li>
 				<a href="#item02">
-					<img src="https://d13yacurqjgara.cloudfront.net/users/22177/screenshots/1514374/essentialswallpaperdribbble-jeremiahbritton.jpg" alt="">
+					<img src="unistoff/WhatsApp Image 2021-09-16 at 16.30.34.jpeg" alt="">
 				</a>
 			</li>
 
