--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -166,32 +166,32 @@
 
 			<li>
 				<a href="#item02">
-					<img src="https://d13yacurqjgara.cloudfront.net/users/22177/screenshots/1502114/upatnight-city-jb.png" alt="">
+					<img src="unistoff/WhatsApp Image 2021-09-16 at 16.30.46.jpeg" alt="">
 				</a>
 			</li>
 			<li>
 				<a class="image" href="#item01">
-					<img src="http://d13yacurqjgara.cloudfront.net/users/22177/screenshots/1483213/dog-jeremiahbritton.jpg" alt="">
+					<img src="unistoff/WhatsApp Image 2021-09-16 at 16.31.02.jpeg" alt="">
 				</a>
 			</li>
 			<li>
 				<a class="image" href="#item02">
-					<img src="http://d13yacurqjgara.cloudfront.net/users/22177/screenshots/1147375/dwyl-circle-jb.png" alt="">
+					<img src="unistoff/WhatsApp Image 2021-09-16 at 16.31.18.jpeg" alt="">
 				</a>
 			</li>
 			<li>
 				<a class="image" href="#item01">
-					<img src="http://d13yacurqjgara.cloudfront.net/users/22177/screenshots/1139662/libertytorch-jeremiahbritton.png" alt="">
+					<img src="unistoff/WhatsApp Image 2021-09-16 at 16.31.32.jpeg" alt="">
 				</a>
 			</li>
 			<li>
 				<a class="image" href="#item01">
-					<img src="https://d13yacurqjgara.cloudfront.net/users/22177/screenshots/1484728/essentials-jeremiahbritton-dribbble.jpg" alt="">
+					<img src="unistoff/WhatsApp Image 2021-09-16 at 16.32.17.jpeg" alt="">
 				</a>
 			</li>
 			<li>
 				<a class="image" href="#item01">
-					<img src="https://d13yacurqjgara.cloudfront.net/users/22177/screenshots/1425556/draftdrawcoasters-jeremiahbritton.png" alt="">
+					<img src="unistoff/WhatsApp Image 2021-09-16 at 16.32.39.jpeg" alt="">
 				</a>
 			</li>
 		</ul>
@@ -203,10 +203,10 @@
 		<div class="row">
 			<div class="description">
 				<h1>Item 01</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
+				<p>Dies sind die verschiedenen Stoffe, die ich momentan zu Auswahl hab.</p>
 			</div>
 
-				<img src="http://d13yacurqjgara.cloudfront.net/users/22177/screenshots/1379781/winterletters-jeremiahbritton-dribbble.png" alt="">
+				<img src="unistoff/WhatsApp Image 2021-09-16 at 16.32.39.jpeg" alt="">
 			</div>
 		</div> <!-- / row -->
 
