--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -382,7 +382,7 @@ img {
      <div class="desc">Baumwolljersey </div> <div class="desc"> gr&uuml;ne </div> <div class="desc">Regenbogen </div>
 
     <img src="WhatsApp Unknown 2022-07-01 at 2.38.11 PM/WhatsApp Image 2022-06-28 at 6.10.18 PM (2).jpeg" alt="WhatsApp Image 2022-06-28 at 6.10.18 PM (2)" title="WhatsApp Image 2022-06-28 at 6.10.18 PM (2)" width="1023" height="1022" />
-      <div class="desc">Baumwolljersey </div> <div class="desc"> Giraffen </div> <div class="desc"> Schlangen </div> <div class="desc"> und Pflanzen </div>
+      <div class="desc">Baumwolljersey </div> <div class="desc"> Giraffen </div> <div class="desc"> und Pflanzen </div>
 
     <img src="WhatsApp Unknown 2022-07-01 at 2.38.11 PM/WhatsApp Image 2022-06-28 at 6.10.18 PM (3).jpeg" alt="WhatsApp Image 2022-06-28 at 6.10.18 PM (3)" title="WhatsApp Image 2022-06-28 at 6.10.18 PM (3)" width="1023" height="1022" />
       <div class="desc">Baumwolljersey </div> <div class="desc"> Eichh&ouml;rnchen </div>
