--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -479,18 +479,11 @@ img {
 
     </div>
 
-
-
-
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
-    <script src="js/index.js"></script>
-    <!--see more button two -->
  <script>
     function myFunction() {
-      var dots = document.getElementById("dotss");
-      var moreText = document.getElementById("moree");
-      var btnText = document.getElementById("myBtnn");
+      var dots = document.getElementById("dots");
+      var moreText = document.getElementById("more");
+      var btnText = document.getElementById("myBtn");
         
       if (dots.style.display === "none") {
         dots.style.display = "inline";
@@ -504,6 +497,13 @@ img {
     }
           
     </script>
+
+
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+    <script src="js/index.js"></script>
+  
+
 
 <br>
 
