--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -779,6 +779,19 @@ img {
     </div>
 
     </div>
+    
+    
+    <script>
+function openNav() {
+  document.getElementById("mySidebar").style.width = "250px";
+  document.getElementById("main").style.marginLeft = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidebar").style.width = "0";
+  document.getElementById("main").style.marginLeft= "0";
+}
+</script>
 
  <script>
     function myFunction() {
