--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -293,8 +293,7 @@ img {
 </button>
 
 	</div>
-	
-	
+
 	<!-- second gallery-->
 <small>  
     <h4 style="color: black;"></h4style><b>Punkte, Streifen und Herzen:</b></h4>  
@@ -304,7 +303,7 @@ img {
 
     <div class="item">
         <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.11.23.jpeg" alt="Baumwolljersey dots weiss" title="Baumwolljersey dots weiss" width="2048" height="2048" />
-            <div class="desc">dots weiss</div>
+            <div class="desc">Baumwolljersey </div> <div class="desc">dots weiss</div>
         </div>
             
         <div class="item">            
