--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -110,6 +110,8 @@ div.desc {
 
 span {
     display: inline-block;
+	vertical-align: top;
+	white-space: nowrap;
 }
 img {
     width: 99%;
@@ -181,7 +183,6 @@ img {
 </small>
 		
 <div class="gallery">
-
   <img src="unistoff/WhatsApp Image 2021-09-16 at 16.30.17.jpeg" alt="WhatsApp Image 2021-09-16 at 16.30.17" title="WhatsApp Image 2021-09-16 at 16.30.17" width="2048" height="2048" />
     <div class="desc"> hellgrau</div> <div class="desc">Baumwolljersey</div>  
 
