--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -79,7 +79,7 @@
 	    
 div.gallery {
    line-height:0;
-   -webkit-column-count:auto; /* split it into 3 columns */
+   -webkit-column-count:4; /* split it into 3 columns */
    -webkit-column-gap:5px; /* give it a 5px gap between columns */
    -moz-column-count:3;
    -moz-column-gap:5px;
