--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -83,7 +83,7 @@ div.gallery {
    -webkit-column-gap:5px; /* give it a 5px gap between columns */
    -moz-column-count:3;
    -moz-column-gap:5px;
-   column-count:auto;
+   column-count:4;
    column-gap:5px;
 }
 div.gallery img {
@@ -292,7 +292,8 @@ img {
     <div class="desc">Musselinstoff</div> <div class="desc"> dunkelblau</div>
     
     </span>
-<button onclick="myFunction()" id="myBtn">Mehr ansehen</button></div>
+<button onclick="myFunction()" id="myBtn">Mehr ansehen</button>
+</div>
 
 
 	<!-- second gallery-->
@@ -313,7 +314,8 @@ img {
 
   <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.12.34.jpeg" alt="WhatsApp Image 2021-09-16 at 17.12.34" title="WhatsApp Image 2021-09-16 at 17.12.34" width="2048" height="2048" />
             <div class="desc">Baumwolljersey </div> <div class="desc"> dots mint</div>
-<span id="dotss"></span><span id="moree">    
+<span id="dotss"> </span> 
+<span id="moree">    
   <img src="punktestoff/WhatsApp Image 2021-09-16 at 17.12.47.jpeg" alt="WhatsApp Image 2021-09-16 at 17.12.47" title="WhatsApp Image 2021-09-16 at 17.12.47" width="2048" height="2048" />
             <div class="desc">Baumwolljersey</div> <div class="desc"> dots blau</div>
  
@@ -558,8 +560,8 @@ img {
                   
               <img src="punktestoff/senffarbenesparkle.jpeg" alt="senffarbene Sparkle" title="senffarbene Sparkle" width="2048" height="2048" />
                 <div class="desc">Baumwolljersey</div> <div class="desc"> senffarbene </div> <div class="desc">Sparkle</div>
-          </span>
-  <button onclick="myFunctionn()" id="myBtnn">Mehr ansehen</button>
+</span>
+<button onclick="myFunctionn()" id="myBtnn">Mehr ansehen</button>
 </div>
 	
 <small>   <h4 style="color: black;"></h4style><b>Tiere und Natur:</b></h4>  </small>
