--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -1054,7 +1054,8 @@ img {
 
     <img src="WhatsApp Unknown 2022-07-01 at 2.38.11 PM/WhatsApp Image 2022-06-28 at 6.10.18 PM (4).jpeg" alt="WhatsApp Image 2022-06-28 at 6.10.18 PM (4)" title="WhatsApp Image 2022-06-28 at 6.10.18 PM (4)" width="1023" height="1022" />
       <div class="desc">Baumwolljersey </div> <div class="desc"> Kamele klein</div>
-<span id="dots5"></span><span id="more5">
+<span id="dots5"></span>
+<span id="more5">
 <div class"item">
     <img src="WhatsApp Unknown 2022-07-01 at 2.38.11 PM/WhatsApp Image 2022-06-28 at 6.10.18 PM (5).jpeg" alt="WhatsApp Image 2022-06-28 at 6.10.18 PM (5)" title="WhatsApp Image 2022-06-28 at 6.10.18 PM (5)" width="1023" height="1022" />
     <div class="desc">Baumwolljersey </div> <div class="desc"> Kamele gro&szlig; </div>
@@ -1142,7 +1143,7 @@ img {
 <div class"item">
     <img src="WhatsApp Unknown 2022-07-01 at 2.38.11 PM/WhatsApp Image 2022-06-28 at 6.10.18 PM.jpeg" alt="WhatsApp Image 2022-06-28 at 6.10.18 PM" title="WhatsApp Image 2022-06-28 at 6.10.18 PM" width="1023" height="1022" />
      <div class="desc">Baumwolljersey </div> <div class="desc"> Federn </div> <div class="desc">rot </div>
-    </div>
+    </div> </span>
 <button onclick="myFunction5()" id="myBtn5">Mehr ansehen</button>
      
     </div>
@@ -1218,7 +1219,7 @@ function closeNav() {
     </script>
 					   
      <script>
-    function myFunctionnn() {
+    function myFunction4() {
       var dots4 = document.getElementById("dots4");
       var moreText4 = document.getElementById("more4");
       var btnText4 = document.getElementById("myBtn4");
