--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -1060,7 +1060,7 @@ img {
     <img src="WhatsApp Unknown 2022-07-01 at 2.38.11 PM/WhatsApp Image 2022-06-28 at 6.10.18 PM (5).jpeg" alt="WhatsApp Image 2022-06-28 at 6.10.18 PM (5)" title="WhatsApp Image 2022-06-28 at 6.10.18 PM (5)" width="1023" height="1022" />
     <div class="desc">Baumwolljersey </div> <div class="desc"> Kamele gro&szlig; </div>
     </div>
-<div class"item>"
+<div class"item">
     <img src="WhatsApp Unknown 2022-07-01 at 2.38.11 PM/WhatsApp Image 2022-06-28 at 6.10.18 PM (6).jpeg" alt="WhatsApp Image 2022-06-28 at 6.10.18 PM (6)" title="WhatsApp Image 2022-06-28 at 6.10.18 PM (6)" width="1023" height="1022" />
      <div class="desc">Baumwolljersey </div> <div class="desc"> Hund mit </div> <div class="desc"> Schleife </div>
     </div>
@@ -1144,6 +1144,7 @@ img {
     <img src="WhatsApp Unknown 2022-07-01 at 2.38.11 PM/WhatsApp Image 2022-06-28 at 6.10.18 PM.jpeg" alt="WhatsApp Image 2022-06-28 at 6.10.18 PM" title="WhatsApp Image 2022-06-28 at 6.10.18 PM" width="1023" height="1022" />
      <div class="desc">Baumwolljersey </div> <div class="desc"> Federn </div> <div class="desc">rot </div>
     </div> </span>
+											       
 <button onclick="myFunction5()" id="myBtn5">Mehr ansehen</button>
      
     </div>
