--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -1056,10 +1056,11 @@ img {
       <div class="desc">Baumwolljersey </div> <div class="desc"> Kamele klein</div>
 <span id="dots5"></span>
 <span id="more5">
-<div class"item">
+	
+
     <img src="WhatsApp Unknown 2022-07-01 at 2.38.11 PM/WhatsApp Image 2022-06-28 at 6.10.18 PM (5).jpeg" alt="WhatsApp Image 2022-06-28 at 6.10.18 PM (5)" title="WhatsApp Image 2022-06-28 at 6.10.18 PM (5)" width="1023" height="1022" />
     <div class="desc">Baumwolljersey </div> <div class="desc"> Kamele gro&szlig; </div>
-    </div>
+ 
 <div class"item">
     <img src="WhatsApp Unknown 2022-07-01 at 2.38.11 PM/WhatsApp Image 2022-06-28 at 6.10.18 PM (6).jpeg" alt="WhatsApp Image 2022-06-28 at 6.10.18 PM (6)" title="WhatsApp Image 2022-06-28 at 6.10.18 PM (6)" width="1023" height="1022" />
      <div class="desc">Baumwolljersey </div> <div class="desc"> Hund mit </div> <div class="desc"> Schleife </div>
@@ -1092,7 +1093,7 @@ img {
     <img src="WhatsApp Unknown 2022-07-01 at 2.38.11 PM/WhatsApp Image 2022-06-28 at 6.10.18 PM (13).jpeg" alt="WhatsApp Image 2022-06-28 at 6.10.18 PM (13)" title="WhatsApp Image 2022-06-28 at 6.10.18 PM (13)" width="1023" height="1022" />
      <div class="desc">Baumwolljersey </div> <div class="desc"> B&auml;r mit </div> <div class="desc">Schleife </div>
     </div>
-<div class"item2>
+<div class"item">
     <img src="WhatsApp Unknown 2022-07-01 at 2.38.11 PM/WhatsApp Image 2022-06-28 at 6.10.18 PM (14).jpeg" alt="WhatsApp Image 2022-06-28 at 6.10.18 PM (14)" title="WhatsApp Image 2022-06-28 at 6.10.18 PM (14)" width="1023" height="1022" />
      <div class="desc">Baumwolljersey </div> <div class="desc"> Blumen </div>
     </div>
@@ -1140,11 +1141,11 @@ img {
     <img src="WhatsApp Unknown 2022-07-01 at 2.38.11 PM/WhatsApp Image 2022-06-28 at 6.10.18 PM (25).jpeg" alt="WhatsApp Image 2022-06-28 at 6.10.18 PM (25)" title="WhatsApp Image 2022-06-28 at 6.10.18 PM (25)" width="1023" height="1022" />
    <div class="desc">Baumwolljersey </div> <div class="desc"> Regenbogen</div> <div class="desc"> orangebraun </div>
     </div>
-<div class"item">
+
     <img src="WhatsApp Unknown 2022-07-01 at 2.38.11 PM/WhatsApp Image 2022-06-28 at 6.10.18 PM.jpeg" alt="WhatsApp Image 2022-06-28 at 6.10.18 PM" title="WhatsApp Image 2022-06-28 at 6.10.18 PM" width="1023" height="1022" />
      <div class="desc">Baumwolljersey </div> <div class="desc"> Federn </div> <div class="desc">rot </div>
-    </div> </span>
-											       
+  
+											       </span>	       
 <button onclick="myFunction5()" id="myBtn5">Mehr ansehen</button>
      
     </div>
