--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -786,7 +786,7 @@ img {
    
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.52.11.jpeg" alt="WhatsApp Image 2021-09-16 at 17.52.11" title="WhatsApp Image 2021-09-16 at 17.52.11" width="2048" height="2048" />
- <div class="desc">Baumwolljersey </div> <div class="desc"> V&ooml;gel und</div> <div class="desc"> Blätter</div>
+ <div class="desc">Baumwolljersey </div> <div class="desc"> V&ouml;gel</div>
    </div>
    
 <div class="item">
