--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -977,7 +977,7 @@ img {
     <div class="desc">Baumwolljersey </div> <div class="desc"> Traktoren Ocker</div>
 <span id="dots4"></span><span id="more4">      
 <img src="Motivstoffe/WhatsApp Image 2021-09-16 at 18.16.55.jpeg" alt="WhatsApp Image 2021-09-16 at 18.16.55" title="WhatsApp Image 2021-09-16 at 18.16.55" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey </div> <div class="desc"> Fahrzeuge </div> <div class="desc"> blauweiß</div>
+    <div class="desc">Baumwolljersey </div> <div class="desc"> Fahrzeuge blauweiß</div>
     
 <img src="Motivstoffe/WhatsApp Image 2021-09-16 at 18.17.26.jpeg" alt="WhatsApp Image 2021-09-16 at 18.17.26" title="WhatsApp Image 2021-09-16 at 18.17.26" width="2048" height="2048" />
     <div class="desc">Baumwolljersey </div> <div class="desc"> gr&uuml;ne Fahrzeuge</div>
