--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -175,7 +175,14 @@ img {
  
 <header>
     <h1>Meine Stoffe <br> <span>[ Portfolio Gallery ]</span></h1>
-    <p>Vergarnt und Zugen&auml;ht <a href="http://vergarntundzugenaeht.de" target="_blank">Ale</a></p>
+    <p>Vergarnt und Zugen&auml;ht <a href="http://vergarntundzugenaeht.de" target="_blank">
+	    <div class="right">
+    <span>
+     
+    <img src="erdman_transparent.png" style="widows: 150px;; height:200px;" alt="Erdmann von Vergarnt und Zugenaeht">
+    </span>
+        </div>
+	    </a></p>
 </header>
 
 <div id="top"></div>
