--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -179,7 +179,7 @@ img {
 	    <div class="right">
     <span>
      
-    <img src="erdman_transparent.png" style="widows: 30px;; height:40px;" alt="Erdmann von Vergarnt und Zugenaeht">
+    <img src="erdman_transparent.png" style="height:40px; align: right" alt="Erdmann von Vergarnt und Zugenaeht">
     </span>
         </div>
 	    </a></p>
