--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -623,7 +623,7 @@ img {
 
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.35.28.jpeg" alt="WhatsApp Image 2021-09-16 at 17.35.28" title="WhatsApp Image 2021-09-16 at 17.35.28" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey </div> <div class="desc"> Dinosaurier </div> <div class="desc">Skelett</div>
+    <div class="desc">Baumwolljersey </div> <div class="desc"> Dinosaurier Skelett</div>
    </div>
 
 <div class="item">
@@ -633,7 +633,7 @@ img {
    
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.36.26.jpeg" alt="WhatsApp Image 2021-09-16 at 17.36.26" title="WhatsApp Image 2021-09-16 at 17.36.26" width="2048" height="2048" />
- <div class="desc">Baumwolljersey</div> <div class="desc"> Dinosaurier </div> <div class="desc"> Natur</div>
+ <div class="desc">Baumwolljersey</div> <div class="desc"> Dinosaurier natur</div>
    </div>
    
 <div class="item">
