--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -160,7 +160,7 @@ img {
   <button class="openbtn" onclick="openNav()"><div class="right">
     <span>
      
-    <img src="erdman_transparent.png" style="width: auto; height: auto" alt="Erdmann von Vergarnt und Zugenaeht">
+    <img src="erdman_transparent.png" style="width: auto; height: 20%" alt="Erdmann von Vergarnt und Zugenaeht">
     </span>
         </div> </button>  
   <div class="content">
