--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -182,7 +182,7 @@ img {
     <h1>Meine Stoffe <br> <span>[<div class="right">
     <span>
      
-    <img src="erdman_transparent.png" style="height: 20px" alt="Erdmann von Vergarnt und Zugenaeht">
+    <img src="erdman_transparent.png" style="height: 20px; width: auto" alt="Erdmann von Vergarnt und Zugenaeht">
     </span>
         </div></span></h1>
     <p>Vergarnt und Zugen&auml;ht <a href="http://vergarntundzugenaeht.de" target="_blank">
