--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -69,7 +69,7 @@
   cursor: pointer;
   background-color: black;
   color: whitesmoke;
-  padding: 10px 15px;
+  padding: 1px 1px;
   border: none;
 }
 
@@ -179,7 +179,7 @@ img {
      
  
 <header>
-    <h1>Meine Stoffe <br> <span>[<div class="right">
+    <h1>Meine Stoffe <br> <span>  <div class="right">
     <span>
      
     <img src="erdman_transparent.png" style="height: 20px; width: auto" alt="Erdmann von Vergarnt und Zugenaeht">
