--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -185,7 +185,7 @@ img {
     <img src="erdman_transparent.png" style="height: 20px; width: auto" alt="Erdmann von Vergarnt und Zugenaeht">
     </span>
         </div></span></h1>
-    <p>Vergarnt und Zugen&auml;ht <a href="http://vergarntundzugenaeht.de" target="_blank">
+    <p>Vergarnt und Zugen&auml;ht <a href="https://www.vergarntundzugenaeht.de/groessentabelle.html" target="_blank">
 	    meine Gr&ouml;ssentabelle
 	    </a></p>
 </header>
