--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -110,6 +110,9 @@ div.desc {
   white-space: wrap;
   width: 90% !important;
   height: 105% !important;
+	 display: inline-block;
+	vertical-align: top;
+	white-space: nowrap;
   }
 
 
@@ -157,12 +160,11 @@ img {
 
 
 <div id="main">
-  <button class="openbtn" onclick="openNav()"><div class="right">
+  <button class="openbtn" onclick="openNav()">
     <span>
-     
-    <img src="erdman_transparent.png" style="height: 10px; width: auto" alt="Erdmann von Vergarnt und Zugenaeht">
+    <img src="erdman_transparent.png" style="font-size: 1.5em" alt="Erdmann von Vergarnt und Zugenaeht">
     </span>
-        </div> </button>  
+    </button>  
   <div class="content">
  <div class="topnav">
         <a class="active" href="index.html">Start</a>
