--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -591,7 +591,7 @@ img {
 	
 	<div class="item">
 		<img src="/stoffe/WhatsApp Image 2021-09-16 at 17.31.26.jpeg" alt="WhatsApp Image 2021-09-16 at 17.31.26" title="WhatsApp Image 2021-09-16 at 17.31.26" width="2048" height="2048" />
-    		<div class="desc">Baumwolljersey</div> <div class="desc"> Elephanten blau</div>
+    		<div class="desc">Baumwolljersey</div> <div class="desc"> Elephanten</div>
    	</div>
 
 <div class="item">
