--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -589,15 +589,13 @@ img {
 
 <div class="gallery">
 	
-	<div class="item">
-		<img src="/stoffe/WhatsApp Image 2021-09-16 at 17.31.26.jpeg" alt="WhatsApp Image 2021-09-16 at 17.31.26" title="WhatsApp Image 2021-09-16 at 17.31.26" width="2048" height="2048" />
-    		<div class="desc">Baumwolljersey</div> <div class="desc"> Elephanten</div>
-   	</div>
 
-<div class="item">
- <img src="stoffe/WhatsApp Image 2021-09-16 at 17.32.03.jpeg" alt="WhatsApp Image 2021-09-16 at 17.32.03" title="WhatsApp Image 2021-09-16 at 17.32.03" width="2048" height="2048" />
-    <div class="desc">Baumwolljersey</div> <div class="desc"> Elephanten blau</div>
-   </div>
+	<img src="/stoffe/WhatsApp Image 2021-09-16 at 17.31.26.jpeg" alt="WhatsApp Image 2021-09-16 at 17.31.26" title="WhatsApp Image 2021-09-16 at 17.31.26" width="2048" height="2048" />
+    		<div class="desc">Baumwolljersey</div> <div class="desc"> Eli, gr&uuml;n </div>
+  
+ 	<img src="stoffe/WhatsApp Image 2021-09-16 at 17.32.03.jpeg" alt="WhatsApp Image 2021-09-16 at 17.32.03" title="WhatsApp Image 2021-09-16 at 17.32.03" width="2048" height="2048" />
+    		<div class="desc">Baumwolljersey</div> <div class="desc"> Eli,  blau</div>
+
 
 <div class="item">
  <img src="stoffe/WhatsApp Image 2021-09-16 at 17.32.24.jpeg" alt="WhatsApp Image 2021-09-16 at 17.32.24" title="WhatsApp Image 2021-09-16 at 17.32.24" width="2048" height="2048" />
