--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -65,7 +65,7 @@
 }
 
 .openbtn {
-  font-size: 10px;
+  font-size: 1px;
   cursor: pointer;
   background-color: black;
   color: whitesmoke;
@@ -74,7 +74,7 @@
 }
 
 .openbtn:hover {
-  background-color: black;
+  background-color: transparent;
 }
 
 #main {
