--- a/src/stoffe.html
+++ b/src/stoffe.html
@@ -65,7 +65,7 @@
 }
 
 .openbtn {
-  font-size: 1px;
+  font-size: 0.5em;
   cursor: pointer;
   background-color: black;
   color: whitesmoke;
@@ -159,7 +159,7 @@ img {
 <div id="main">
   <button class="openbtn" onclick="openNav()">
     <span>
-    <img src="erdman_transparent.png" style="font-size: 0.5em" alt="Erdmann von Vergarnt und Zugenaeht">
+    <img src="erdman_transparent.png" style="font-size: 1px" alt="Erdmann von Vergarnt und Zugenaeht">
     </span>
     </button>  
   <div class="content">
